# cctv

./: README.md
code/: Dockerfile  attach.sh  create_virtual_cams.sh  inspect.sh  pyproject.toml  run.sh  stop.sh  tests.sh
code/project/: cam.py  database.py  db_logic.py  notification.py  schema.py  server.py
code/project/tests/: test_cam.py  test_server.py
code/static/: videojs-vjsdownload.js
code/templates/: cams.html  index.html  login.html  settings.html  template.html
code/templates/fragments/: intrusiondetection.html  passwordchange.html  poperror.html  streamingmethod.html
code/templates/pages/: alerts.html  cams.html  login.html  settings.html
