[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Marco Bartoli <marco.bartoli.dev@gmail.com>"]

[tool.poetry.scripts]
start = "project.server:main"
cam = "project.cam:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
#opencv-python-headless = "^4.8.0.76"
numpy = "^1.25.2"
websockets = "^11.0.3"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
SQLAlchemy = "^2.0.20"
passlib = "^1.7.4"
SQLAlchemy-Utils = "^0.41.1"
[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"